Closed Bug 1669836 Opened 5 years ago Closed 3 years ago

Crash in [@ shutdownhang | mozilla::AppWindow::ShowModal] via MsgPromptLoginFailed

Categories

(Toolkit Graveyard :: Notifications and Alerts, defect)

78 Branch
x86
All
defect

Tracking

(firefox-esr102 fixed, firefox106 wontfix, firefox107 wontfix, firefox108 fixed)

RESOLVED FIXED
108 Branch
Tracking Status
firefox-esr102 --- fixed
firefox106 --- wontfix
firefox107 --- wontfix
firefox108 --- fixed

People

(Reporter: Robert_Hartmann, Assigned: jstutte)

References

(Depends on 1 open bug)

Details

(4 keywords, Whiteboard: [tbird topcrash])

Crash Data

Attachments

(1 file)

Thunderbird 78.3.1 Crash Report [@ shutdownhang | mozilla::AppWindow::ShowModal ]

Crash report: https://crash-stats.mozilla.org/report/index/06a74057-645b-4392-9aeb-a3d5b0201007

MOZ_CRASH Reason: MOZ_CRASH(Shutdown hanging before starting.)

Top 10 frames of crashing thread:

0 ntdll.dll NtWaitForAlertByThreadId 
1 ntdll.dll RtlSleepConditionVariableSRW 
2 kernelbase.dll SleepConditionVariableSRW 
3 mozglue.dll mozilla::detail::ConditionVariableImpl::wait mozglue/misc/ConditionVariable_windows.cpp:50
4 xul.dll mozilla::ThreadEventQueue<mozilla::PrioritizedEventQueue>::GetEvent xpcom/threads/ThreadEventQueue.cpp:207
5 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1129
6 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:501
7 xul.dll mozilla::AppWindow::ShowModal xpfe/appshell/AppWindow.cpp:505
8 xul.dll nsContentTreeOwner::ShowAsModal xpfe/appshell/nsContentTreeOwner.cpp:450
9 xul.dll nsWindowWatcher::OpenWindowInternal toolkit/components/windowwatcher/nsWindowWatcher.cpp:1316

Robert, can you still reproduce this?

The crash rate since Oct 16 is greatly reduced. Unclear yet whether that is because of version 78.3.3 or some other software update.

Component: Untriaged → General
Flags: needinfo?(Robert_Hartmann)
Summary: Crash in [@ shutdownhang | mozilla::AppWindow::ShowModal] → Crash in [@ shutdownhang | mozilla::AppWindow::ShowModal] via MsgPromptLoginFailed

Hi Wayne,
may be changed in Thunderbird 78.4.0
Crash Report [@ shutdownhang | nsThread::Shutdown | nsThreadManager::Shutdown ]
MOZ_CRASH Reason (Sanitized) MOZ_CRASH(Shutdown too long, probably frozen, causing a crash.)
see bp-61c56551-65d4-4a37-a04c-a8e710201026

Frame 	Module 	Signature 	Source 	Trust
0 	ntdll.dll 	NtWaitForAlertByThreadId 		context
1 	ntdll.dll 	RtlSleepConditionVariableSRW 		cfi
2 	kernelbase.dll 	SleepConditionVariableSRW 		cfi
3 	mozglue.dll 	mozilla::detail::ConditionVariableImpl::wait(mozilla::detail::MutexImpl&) 	mozglue/misc/ConditionVariable_windows.cpp:50 	cfi
4 	xul.dll 	mozilla::ThreadEventQueue<mozilla::PrioritizedEventQueue>::GetEvent(bool, mozilla::EventQueuePriority*, mozilla::BaseTimeDuration<mozilla::TimeDurationValueCalculator>*) 	xpcom/threads/ThreadEventQueue.cpp:207 	cfi
5 	xul.dll 	nsThread::ProcessNextEvent(bool, bool*) 	xpcom/threads/nsThread.cpp:1129 	cfi
6 	xul.dll 	NS_ProcessNextEvent(nsIThread*, bool) 	xpcom/threads/nsThreadUtils.cpp:501 	cfi
7 	xul.dll 	nsThread::Shutdown() 	xpcom/threads/nsThread.cpp:891 	cfi
8 	xul.dll 	nsThreadManager::Shutdown() 	xpcom/threads/nsThreadManager.cpp:467 	cfi
9 	xul.dll 	mozilla::ShutdownXPCOM(nsIServiceManager*) 	xpcom/build/XPCOMInit.cpp:666 	cfi
10 	xul.dll 	ScopedXPCOMStartup::~ScopedXPCOMStartup() 	toolkit/xre/nsAppRunner.cpp:1278 	cfi
Flags: needinfo?(Robert_Hartmann)

The crash rate since Oct 16 is greatly reduced. Unclear yet whether that is because of version 78.3.3 or some other software update.

But this has changed to #12 crash for 78.4.0

See Also: → 1630597
See Also: → 1685084
See Also: → 1524247

Do you have steps to reproduce? That include, for example, password prompts at startup?

Flags: needinfo?(Robert_Hartmann)

#5 shutdown crash for version 78. But signature doesn't exist in version 91.

Feels wrong to call it WFM. Perhaps you have a version 91 shutdown crash that is common?

Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Flags: needinfo?(Robert_Hartmann)
Resolution: --- → INCOMPLETE

another manesfestation of password prompt?

shutdownhang | mozilla::TaskController::GetRunnableForMTTask | mozilla::AppWindow::ShowModal is a topcrash for both 91 and 102.

bp-9806694f-6fcf-4be8-ba8d-98c0a0220807

17 XUL JS_CallFunctionValue(JSContext*, JS::Handle<JSObject*>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) js/src/vm/CallAndConstruct.cpp:53
18 XUL nsXPCWrappedJS::CallMethod(unsigned short, nsXPTMethodInfo const*, nsXPTCMiniVariant*) js/xpconnect/src/XPCWrappedJSClass.cpp:981
19 XUL PrepareAndDispatch xpcom/reflect/xptcall/md/unix/xptcstubs_x86_64_darwin.cpp:117
20 XUL SharedStub
Ø 21 None @0x00000001131ef0ff
22 XUL MsgPromptLoginFailed(nsIMsgWindow*, nsTSubstring<char> const&, nsTSubstring<char> const&, nsTSubstring<char16_t> const&, int*) mailnews/base/src/nsMsgUtils.cpp:1582
23 XUL {virtual override thunk({offset(-216)}, nsImapIncomingServer::PromptLoginFailed(nsIMsgWindow*, int*))}
24 XUL (anonymous namespace)::SyncRunnable2<nsIImapServerSink, nsIMsgWindow*, int*>::Run() mailnews/imap/src/nsSyncRunnableHelpers.cpp:121
25 XUL mozilla::RunnableTask::Run() xpcom/threads/TaskController.cpp:538
26 XUL mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) xpcom/threads/TaskController.cpp:851
27 XUL mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) xpcom/threads/TaskController.cpp:683
28 XUL mozilla::TaskController::ProcessPendingMTTask(bool) xpcom/threads/TaskController.cpp:461
29 XUL mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_1>::Run() xpcom/threads/nsThreadUtils.h:531
30 XUL nsThread::ProcessNextEvent(bool, bool*) xpcom/threads/nsThread.cpp:1205
31 XUL nsThread::Shutdown() xpcom/threads/nsThread.cpp:900
32 XUL mozilla::storage::Connection::shutdownAsyncThread() storage/mozStorageConnection.cpp:1106
33 XUL mozilla::detail::RunnableMethodImpl<RefPtr<mozilla::storage::Connection>, void (mozilla::storage::Connection::)(), true, (mozilla::RunnableKind)0, >::Run() xpcom/threads/nsThreadUtils.h:1200
34 XUL mozilla::RunnableTask::Run() xpcom/threads/TaskController.cpp:538
35 XUL mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) xpcom/threads/TaskController.cpp:851
36 XUL mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) xpcom/threads/TaskController.cpp:683
37 XUL mozilla::TaskController::ProcessPendingMTTask(bool) xpcom/threads/TaskController.cpp:461
38 XUL mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_1>::Run() xpcom/threads/nsThreadUtils.h:531
39 XUL nsThread::ProcessNextEvent(bool, bool
) xpcom/threads/nsThread.cpp:1205
40 XUL NS_ProcessNextEvent(nsIThread*, bool) xpcom/threads/nsThreadUtils.cpp:465
41 XUL mozilla::gmp::GeckoMediaPluginServiceParent::Observe(nsISupports*, char const*, char16_t const*) dom/media/gmp/GMPServiceParent.cpp:288
42 XUL nsObserverList::NotifyObservers(nsISupports*, char const*, char16_t const*) xpcom/ds/nsObserverList.cpp:70
43 XUL nsObserverService::NotifyObservers(nsISupports*, char const*, char16_t const*) xpcom/ds/nsObserverService.cpp:291
44 XUL mozilla::AppShutdown::AdvanceShutdownPhase(mozilla::ShutdownPhase, char16_t const*, nsCOMPtr<nsISupports> const&) xpcom/base/AppShutdown.cpp:391
45 XUL nsXREDirProvider::DoShutdown() toolkit/xre/nsXREDirProvider.cpp:997
46 XUL ScopedXPCOMStartup::~ScopedXPCOMStartup() toolkit/xre/nsAppRunner.cpp:2056
47 XUL mozilla::UniquePtr<ScopedXPCOMStartup, mozilla::DefaultDelete<ScopedXPCOMStartup> >::operator=(std::nullptr_t) mfbt/UniquePtr.h:275
48 XUL XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) toolkit/xre/nsAppRunner.cpp:5927
49 XUL XRE_main(int, char**, mozilla::BootstrapConfig const&) toolkit/xre/nsAppRunner.cpp:5962
50 thunderbird main mail/app/nsMailApp.cpp:368
51 libdyld.dylib start

Status: RESOLVED → REOPENED
Crash Signature: [@ shutdownhang | mozilla::AppWindow::ShowModal] → [@ shutdownhang | mozilla::AppWindow::ShowModal] [@ shutdownhang | mozilla::TaskController::GetRunnableForMTTask | mozilla::AppWindow::ShowModal]
Depends on: 1524247
Ever confirmed: true
OS: Windows 10 → All
Resolution: INCOMPLETE → ---
Crash Signature: [@ shutdownhang | mozilla::AppWindow::ShowModal] [@ shutdownhang | mozilla::TaskController::GetRunnableForMTTask | mozilla::AppWindow::ShowModal] → [@ shutdownhang | mozilla::AppWindow::ShowModal] [@ shutdownhang | mozilla::SpinEventLoopUntil | mozilla::AppWindow::ShowModal] [@ shutdownhang | mozilla::TaskController::GetRunnableForMTTask | mozilla::AppWindow::ShowModal]
Component: General → Notifications and Alerts
Product: Thunderbird → Toolkit
Version: 78 → 78 Branch
Whiteboard: [tbird topcrash]

The bug is linked to a topcrash signature, which matches the following criteria:

  • Top 20 desktop browser crashes on release
  • Top 20 desktop browser crashes on beta

:tspurway, could you consider increasing the severity of this top-crash bug?

For more information, please visit auto_nag documentation.

Flags: needinfo?(tspurway)
Keywords: topcrash
Assignee: nobody → jstutte
See Also: → 1699041
Attachment #9301529 - Attachment description: Bug 1669836 - Bail out from modal dialog during shutdown. r?tnikkel → Bug 1669836 - Bail out from modal dialog during shutdown. r?emilio
See Also: → 1799115
Pushed by jstutte@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a3360ccd870d Bail out from modal dialog during shutdown. r=emilio
Status: REOPENED → RESOLVED
Closed: 4 years ago3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
Flags: needinfo?(tspurway)

Please nominate this for ESR102 approval when you get a chance. It grafts cleanly.

Flags: needinfo?(jstutte)

Comment on attachment 9301529 [details]
Bug 1669836 - Bail out from modal dialog during shutdown. r?emilio

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: This is a thunderbird topcrash.
  • User impact if declined: Shutdown hangs caused by open, unanswered modal dialogs.
  • Fix Landed on Version: 108
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The patch prefers a silent exit over a secure hang in the unexpected situation where we decide for a sure shutdown while a modal dialog is open. While it is true that we do not know, what those dialogs might ask for, we are beyond the line of no return in this situation and prefer interrupting the UI flow over a secure hang.
Flags: needinfo?(jstutte)
Attachment #9301529 - Flags: approval-mozilla-esr102?

Comment on attachment 9301529 [details]
Bug 1669836 - Bail out from modal dialog during shutdown. r?emilio

Approved for 102.6esr.

Attachment #9301529 - Flags: approval-mozilla-esr102? → approval-mozilla-esr102+
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: