Bug 1669836 - Bail out from modal dialog during shutdown. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D161038